--- a/src/theme/sizes.scss
+++ b/src/theme/sizes.scss
@@ -1,5 +1,5 @@
 /*Breakpoints*/
-$break-small:500px;
+$break-small:900px;
 $break-large:1024px;
 
 @mixin respond-to($media) {
